[package]
name = "lau-conservation-laws"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-conservation-laws"
description = "Conservation laws in discrete systems — Noether's theorem, finite-volume schemes, and CRDT conservation for agent fleets"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[dev-dependencies]
